# BxEngine

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  config.sh
config/: BxEngineConfig.h.in
dep/MyLibrary/: CMakeLists.txt  GDebugMessageCallBack.cpp  IndexBuffer.cpp  Renderer.cpp  Shader.cpp  Texture.cpp  VertexArray.cpp  VertexBuffer.cpp
dep/MyLibrary/header/: BufferLayout.h  IndexBuffer.h  Renderer.h  Shader.h  Texture.h  VertexArray.h  VertexBuffer.h  VertexBufferLayout.h
header/: GDebugMessageCallBack.h  VertexBuffer.h  VertexBufferLayout.h
res/shaders/: BasicFragmentShader.frag  BasicShader.glsl  BasicShader.shader  BasicVertexShader.vert  ColorTriangle.frag  ColorTriangle.vert
src/: Application.cpp
